--- a/.gitignore
+++ b/.gitignore
@@ -39,13 +39,15 @@ ExportedObj/
 *.pidb.meta
 *.pdb.meta
 *.mdb.meta
-
+*.data.unityweb
+*ModularCharacters.fbx
 # Unity3D generated file on crash reports
 sysinfo.txt
 
 # Builds
 *.apk
 *.unitypackage
+*.zip
 
 # Crashlytics generated file
 crashlytics-build.properties
