--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,9 @@ crashlytics-build.properties
 # Windows
 Thumbs.db
 Thumbs.db.meta
-
+BildForDemo11/Build/BildForDemo11.data.unityweb
+BildForDemo11.zip
+ModularCharacters.fbx
 # MacOS
 *.DS_Store
 
