--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ads": "4.4.2",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.analytics": "3.8.1",
+    "com.unity.autolod": "https://github.com/Unity-Technologies/AutoLOD.git",
     "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.1.0",
     "com.unity.formats.fbx": "4.2.1",
@@ -16,6 +17,7 @@
     "com.unity.textmeshpro": "3.0.8",
     "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
+    "com.whinarn.unitymeshsimplifier": "https://github.com/Whinarn/UnityMeshSimplifier.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
