--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ ExportedObj/
 *.pdb.meta
 *.mdb.meta
 *.data.unityweb
-*ModularCharacters.fbx
+ModularCharacters.fbx
 # Unity3D generated file on crash reports
 sysinfo.txt
 
