--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.unity.addressables": "1.21.21",
     "com.unity.ide.rider": "3.0.34",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.9",
